--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
+    --background-secondary: hsl(210, 40%, 98%);
+
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
  
@@ -38,6 +40,8 @@
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
+
+    --background-secondary: hsl(222, 47%, 11%);
  
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
